change&fix shortcut for cluster plot size

--- a/cluster-plots.html
+++ b/cluster-plots.html
@@ -448,8 +448,8 @@ bottom: 0px;
     <iron-a11y-keys keys="f+only f+shift" on-keys-pressed="_active_to_src"  target="[[keyboard_target]]"></iron-a11y-keys>
 
     <!-- TODO: replace the random unicode chars with plus and minus -->
-    <iron-a11y-keys keys="»+only" on-keys-pressed="_inc_size"  target="[[keyboard_target]]"></iron-a11y-keys>
-    <iron-a11y-keys keys="½+only" on-keys-pressed="_dec_size"  target="[[keyboard_target]]"></iron-a11y-keys>
+    <iron-a11y-keys keys="m+only" on-keys-pressed="_inc_size"  target="[[keyboard_target]]"></iron-a11y-keys>
+    <iron-a11y-keys keys="n+only" on-keys-pressed="_dec_size"  target="[[keyboard_target]]"></iron-a11y-keys>
 
     <div class="top" style$="[[_scroll_shadow(scrolled_down)]]">
         <div class="active_stickers">
