--- a/index.html
+++ b/index.html
@@ -29963,8 +29963,8 @@ bottom: 0px;
     <iron-a11y-keys keys="f+only f+shift" on-keys-pressed="_active_to_src" target="[[keyboard_target]]"></iron-a11y-keys>
 
     
-    <iron-a11y-keys keys="»+only" on-keys-pressed="_inc_size" target="[[keyboard_target]]"></iron-a11y-keys>
-    <iron-a11y-keys keys="½+only" on-keys-pressed="_dec_size" target="[[keyboard_target]]"></iron-a11y-keys>
+    <iron-a11y-keys keys="m+only" on-keys-pressed="_inc_size" target="[[keyboard_target]]"></iron-a11y-keys>
+    <iron-a11y-keys keys="n+only" on-keys-pressed="_dec_size" target="[[keyboard_target]]"></iron-a11y-keys>
 
     <div class="top" style$="[[_scroll_shadow(scrolled_down)]]">
         <div class="active_stickers">
@@ -30457,6 +30457,7 @@ bottom: 0px;
             <li><b>x</b> show pos settings</li>
             <li><b>k</b> show this info ("k" is for keyboard)</li>
             <li><b>?</b> open GitHub info in a new tab</li>
+            <li><b>m,n</b> increase/decrease the size of the cluster plots</li>
             </ul>   
         <p></p>                    
     </floating-pane>
