--- a/index_full.html
+++ b/index_full.html
@@ -294,6 +294,7 @@ bottom: 0px;
             <li><b>x</b> show pos settings</li>
             <li><b>k</b> show this info ("k" is for keyboard)</li>
             <li><b>?</b> open GitHub info in a new tab</li>
+            <li><b>m,n</b> increase/decrease the size of the cluster plots</li>
             </ul>   
         </p>                    
     </floating-pane>
